tests/ui/const-generics/outer-lifetime-in-const-generic-default.stderr
error: generic parameters may not be used in const operations
  --> $DIR/outer-lifetime-in-const-generic-default.rs:4:17
   |
LL |         let x: &'a ();
   |                 ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 1 previous error

